<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>finance.tradista.app</groupId>
		<artifactId>parent</artifactId>
		<version>${parent.version}</version>
		<relativePath>../tradista-parent</relativePath>
	</parent>
	<groupId>finance.tradista.security</groupId>
	<artifactId>security-ejb</artifactId>
	<version>${security-ejb.version}</version>
	<packaging>ejb</packaging>
	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.10.1</version>
				<configuration>
					<release>17</release>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-ejb-plugin</artifactId>
				<version>3.2.1</version>
				<configuration>
					<ejbVersion>3.2</ejbVersion>
					<archive>
						<manifest>
							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
						</manifest>
					</archive>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<dependencies>
		<dependency>
			<groupId>finance.tradista.security</groupId>
			<artifactId>security-persistence</artifactId>
			<version>${security-persistence.version}</version>
		</dependency>
		<dependency>
			<groupId>finance.tradista.security</groupId>
			<artifactId>security-business</artifactId>
			<version>${security-business.version}</version>
		</dependency>
		<dependency>
			<groupId>jakarta.platform</groupId>
			<artifactId>jakarta.jakartaee-api</artifactId>
			<version>10.0.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.jboss.ejb3</groupId>
			<artifactId>jboss-ejb3-ext-api</artifactId>
			<version>2.3.0.Final</version>
		</dependency>
	</dependencies>
</project>